src/test/ui/span/issue-71363.stderr
error[E0277]: `MyError` doesn't implement `std::fmt::Display`
 --> $DIR/issue-71363.rs:6:6
  |
6 | impl std::error::Error for MyError {}
  |      ^^^^^^^^^^^^^^^^^ `MyError` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `MyError`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`

error[E0277]: `MyError` doesn't implement `Debug`
 --> $DIR/issue-71363.rs:6:6
  |
6 | impl std::error::Error for MyError {}
  |      ^^^^^^^^^^^^^^^^^ `MyError` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `MyError`
  = note: add `#[derive(Debug)]` to `MyError` or manually `impl Debug for MyError`
note: required by a bound in `std::error::Error`
help: consider annotating `MyError` with `#[derive(Debug)]`
  |
5 | #[derive(Debug)]
  |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
